--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,7 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+#Environment Variables
+src/environments/environment.ts
+src/environments/environment.prod.ts
